--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
